--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
+    "stream-browserify": "^2.0.1",
     "vinyl-source-stream": "^1.1.0"
   }
 }
