--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/shigemk2/my-gulp-template#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "stream-browserify": "^2.0.1",
